--- a/Observer-I/README.adoc
+++ b/Observer-I/README.adoc
@@ -1,1 +1,27 @@
-https://www.youtube.com/watch?v=CkpSOhIuHSY&t=117s
+
+* *ObservableCls:*
+	** This class keeps track of all the observers and provides the facility to *add*(*addObserver()*) or *remove*(*removeObserver*) the observers. 
+	** Also it is the class that is *responsible for updating the observers*(*Notify()*) when any change occurs.
+
+* *PatientCls:*
+* *PatientRelativeCls:*
+	** This class is the real class that *implements the ObservableCls*. 
+	** This class is the entity whose change will affect other objects by calling (*Notify()*). 
+
+* *ObserverIfc:*
+	** This represents *an interface* that defines the method that should be called whenever there is change.
+	** *ObserverIfc::Update()* method is called for notify other objects about changes
+
+* *DoctorCls:*
+* *NurseCls:*
+	** This is the class which needs to *keep itself updated* with the change in Observable Objects . 
+	** This class just needs 
+	    *** to *implement* the "ObserverIfc
+	    *** *register* itself with the "ObservableIfc"
+	    *** it is all set to *receive* the "updates".	    
+
+
+
+*_references :_* 
+    
+    https://www.youtube.com/watch?v=CkpSOhIuHSY&t=117s
