--- a/Observer-II/README.adoc
+++ b/Observer-II/README.adoc
@@ -1,11 +1,11 @@
 
-* *SubjectCls :*
-	** This class keeps track of all the observers and provides the facility to *add* or *remove* the observers. 
-	** Also it is the class that is *responsible for updating the observers* when any change occurs.
+* *SubjectCls:*
+	** This class keeps track of all the observers and provides the facility to *add*(*Attach()*) or *remove*(*Detach*) the observers. 
+	** Also it is the class that is *responsible for updating the observers*(*Notify()*) when any change occurs.
 
 * *DummyProjectCls:*
 	** This class is the real class that *implements the Subject*. 
-	** This class is the entity whose change will affect other objects. 
+	** This class is the entity whose change will affect other objects by calling (*Notify()*). 
 
 * *ObserverIfc:*
 	** This represents *an interface* that defines the method that should be called whenever there is change.
@@ -15,7 +15,7 @@
 	** This is the class which needs to *keep itself updated* with the change. 
 	** This class just needs 
 	    *** to *implement* the "ObserverIfc
-	    *** *register* itself with the "DummyProductCls
+	    *** *register* itself with the "SubjectCls"
 	    *** it is all set to *receive* the "updates". 
 	    
 
