README.adoc updated. added description of classes roles

--- a/Observer-III/README.adoc
+++ b/Observer-III/README.adoc
@@ -1,3 +1,28 @@
-references : 
-https://www.youtube.com/watch?v=YUCXjUPUbn0
-https://www.youtube.com/watch?v=YXIkfRlIh2k
+
+* *SubjectIfc:*
+	** This class keeps track of all the observers and provides the facility to *add*(*registerObserver()*) or *remove*(*unregisterObserver()*) the observers. 
+	** Also it is the class that is *responsible for updating the observers*(*notifyObservers()*) when any change occurs.
+
+* *DummyProjectCls:*
+	** This class is the real class that *implements the Subject*. 
+	** This class is the entity whose change will affect other objects by calling (*notifyObservers()*). 
+
+* *ObserverIfc:*
+	** This represents *an interface* that defines the method that should be called whenever there is change.
+	** *ObserverIfc::Update()* method is called for notify other objects about changes
+
+* *AverageScoreDisplayCls:*
+* *CurrentScoreDisplayCls:*
+	** This is the class which needs to *keep itself updated* with the change. 
+	** This class just needs 
+	    *** to *implement* the "ObserverIfc"
+	    *** *register* itself with the "SubjectCls"
+	    *** it is all set to *receive* the "updates". 
+	    
+
+
+
+*_references :_* 
+    
+	https://www.youtube.com/watch?v=YUCXjUPUbn0
+	https://www.youtube.com/watch?v=YXIkfRlIh2k
